Update list in real-time
Apply ListPage and ItemElement updates via Activity. Add ItemElement.editMode and buffer model
changes while list or items are being edited. Add missing stream endpoint for List.activity.

Also enable autoplay via URL, remove parts of obsolete ListPage create mode, update to micro 0.49
and update boilerplate.

Close #57.

--- a/client/index.html
+++ b/client/index.html
@@ -425,8 +425,8 @@
                 </button>
             </p>
             <li
-                is="listling-item" data-list="lst" data-onedit="stopCreateItem"
-                data-oncancel="stopCreateItem"
+                is="listling-item" data-list="lst" data-edit-mode="true"
+                data-onedit="stopCreateItem" data-oncancel="stopCreateItem"
             ></li>
         </div>
 
