Fix cropped item move handle for long title
Close #62.

--- a/client/index.html
+++ b/client/index.html
@@ -886,7 +886,7 @@
 
         [is=listling-item] .micro-ol-handle {
             padding: calc(1.5em / 4);
-            width: calc(1.5em / 2 + 1.5em / 2);
+            min-width: calc(1.5em / 2 + 1.5em / 2);
             height: calc(1.5em + 1.5em / 2);
             background:
                 radial-gradient(circle closest-side, #888 0%, #888 50%, transparent 50%) content-box
