Fix missing value placeholder
Close #93.

--- a/client/index.html
+++ b/client/index.html
@@ -777,7 +777,7 @@
                         </p>
                         <input
                             class="micro-panel-main listling-item-mode-edit" name="value"
-                            type="number" step="any"
+                            type="number" step="any" placeholder="Value (optional)"
                         />
                         <p class="listling-item-mode-edit" data-content="lst.value_unit"></p>
                     </dd>
