Shorten list URLs
Implement /s for short URLs and pass it through in service worker. Show and update short URL in
presentation mode.

Also use page._data as Presentation._data.

Close #55.

--- a/client/index.html
+++ b/client/index.html
@@ -490,6 +490,13 @@
                 >
                     <i class="fa fa-fw fa-step-forward"></i>
                 </button>
+                <p class="micro-panel-main">
+                    <span data-content="switch presentationShortURL">
+                        <template>
+                            Join at <span data-content="presentationShortURL"></span>
+                        </template>
+                    </span>
+                </p>
                 <div class="listling-list-exit-presentation" data-content="switch presentationMode">
                     <template>
                         <button
@@ -582,10 +589,6 @@
             bottom: 0;
             box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.33);
             background: white;
-        }
-
-        .listling-list-exit-presentation {
-            margin-left: auto;
         }
 
         listling-list-page:not(.listling-list-mode-view) .listling-list-mode-view,
